@@ -1,6 +1,3 @@
 NOTES
 
-To compile on windows, please add the following to your GNUmakefile.preamble
-
-ADDITIONAL_GUI_LIBS += -lwinmm
-
+No specific notes for Windows compilation currently.
